Fixes navbar overlap and other CSS

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,8 @@ body {
 .img-small {
   width: 100px;
 }
+
+.content {
+  padding: 50px;
+
+}
